--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+boto==2.49.0
 boto3==1.9.234
 botocore==1.12.234
 certifi==2019.6.16
@@ -16,6 +17,7 @@ gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
 jmespath==0.9.4
+olefile==0.46
 Pillow==6.1.0
 psycopg2==2.8.3
 pycparser==2.19
